---------------------------------------------------------------------------------------------------
Version: 1.0.3
  Bugfix:
    - Fixed issue where quality was not accounted for.

---------------------------------------------------------------------------------------------------
Version: 1.0.2
  Bugfix:
    - Fixed crash involving changes to how equipment energy sources are referenced.
  Note:
    - Quality is currently not taken into account with power transfer.
    - Higher quality Personal Transformers do not get increased gains.

---------------------------------------------------------------------------------------------------
Version: 1.0.1
  Features:
    - Updated to Factorio version 2.0.
    - Works with Quality enabled.
    - Works with Elevated Rails enabled.
    - Works with Space Age enabled.

---------------------------------------------------------------------------------------------------
Version: 1.0.0
  Features:
    - Added settings to allow for the configuration of the flow rate of each transformer.
    - Removed Beta tag from 'Allow Personal Transformer in non-armor Grids' setting.
    - Added ability to enable/disable the ability to use the shortcuts in most scenarios.
  Bugfix:
    - Fixed several crashes introduced in 0.1.18 despite the fact I swear I tested those scenarios
    - Fixed case where when a train was cloned it would leave duplicates of the invisible transformers lying around.
    - Fixed case where infinite energy could be created with both input and output on.
  Note:
    - Remove all transformers from grids upon updating.
    - Biggest performance hits are on having a large amount of other gear in your grid. If you can think of a way to improve this, please let me know.

---------------------------------------------------------------------------------------------------
Version: 0.1.18
  Optimizations:
    - Refactored for performance. Got about a 30% improvement in my SE factory I was testing on.
  Features: