@@ -2,6 +2,11 @@
 Version: 1.0.3
   Bugfix:
     - Fixed issue where quality was not accounted for.
+  Current Bugs:
+    - Putting on armor or placing a vehicle with Personal Transformers in them will upgrade all Personal Transformers to Legendary Quality.
+    - To revert to the actual quality, take out and replace the Personal Transformers in the armor/vehicle.
+    - Currently quality is not accounted for when counting equipment in grids. And I'm hoping for an update to the API as opposed to rewriting a large portion.
+    - Request for API update: https://forums.factorio.com/viewtopic.php?f=28&t=118603
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
